--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,8 @@
         "limits": "c",
         "new": "c",
         "sound.h": "c",
-        "allegro_acodec.h": "c"
+        "allegro_acodec.h": "c",
+        "allegro_audio.h": "c",
+        "power_up.h": "c"
     }
 }
