--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "allegro_acodec.h": "c",
         "allegro_audio.h": "c",
         "power_up.h": "c",
-        "allegro_headers.h": "c"
+        "allegro_headers.h": "c",
+        "tutorial.h": "c"
     }
 }
