--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,14 @@
         "power_up.h": "c",
         "menu.h": "c",
         "joystick.h": "c",
-        "difficult.h": "c"
+        "difficult.h": "c",
+        "tutorial.h": "c",
+        "stdlib.h": "c",
+        "string.h": "c",
+        "allegro5.h": "c",
+        "allegro.h": "c",
+        "base.h": "c",
+        "alconfig.h": "c",
+        "alplatf.h": "c"
     }
 }
